<resources>
    <string name="app_name">Portfolio</string>
    <string name="title">Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="toast_button_click">TODO - Implement app: %1$s</string>

    <string name="button_spotify_streamer">Spotify Streamer</string>
    <string name="button_scores">Scores App</string>
    <string name="button_library">Library</string>
    <string name="button_build_it_bigger">Build it bigger</string>
    <string name="button_reader">Some reader</string>
    <string name="button_capstone">Capstone: My Own App</string>

</resources>
